# LiteLLM-Management

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/litellm_management/: __init__.py  cli.py  cli_progress.py  cli_ui.py  config.py  litellm_client.py
src/litellm_management/features/: __init__.py  base.py  registry.py  test_available_models.py  test_long_generation.py
