[project]
name = "litellm-management"
version = "0.1.0"
description = "Tools and scripts for managing LiteLLM."
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [{ name = "pavlix" }]
dependencies = ["pydantic (>=2.13.3,<3.0.0)", "openai (>=2.32.0,<3.0.0)", "python-dotenv (>=1.2.2,<2.0.0)", "rich (>=15.0.0,<16.0.0)"]

[project.scripts]
litellm_management = "litellm_management.cli:main"

[tool.poetry]
packages = [{ include = "litellm_management", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
